infrastructure/kubernetes/monitoring/grafana/service.yml
apiVersion: v1
kind: Service

metadata:
  name: grafana
  namespace: monitoring

  labels:
    app.kubernetes.io/name: grafana
    app.kubernetes.io/instance: flashstore
    app.kubernetes.io/version: "1.0.0"
    app.kubernetes.io/component: monitoring
    app.kubernetes.io/part-of: flashstore
    app.kubernetes.io/managed-by: kubectl

  annotations:
    description: "ClusterIP Service for Grafana"

spec:
  type: ClusterIP

  selector:
    app.kubernetes.io/name: grafana
    app.kubernetes.io/instance: flashstore

  ports:
    - name: http

      port: 3000

      targetPort: http

      protocol: TCP
